# rs-autoregression-prediction

./: .flake8  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.py  tasks.py
code/: assemble_dataset.py  baseline_connectome_svm.py  baseline_dx_prediction.py  baseline_dx_prediction_convlayers.py  baseline_dx_predictions.py  baseline_dx_predictions_horizon.py  create_cross_validation_splits.py  extract_features.py  extract_layers.py  get_layers.py  latent_feature_dx_prediction.py  parameters.json  predict_horizon.py  predict_t+1.py  prototype_predictions.py  quick_visualisation_training.py  select_data.py  train_and_test.py  workbook.ipynb
config/: base.yaml  extract.yaml  full_experiment.yaml  predict.yaml  train.yaml  training_scaling.yaml
configs/: downstream.yaml  eval.yaml  train.yaml
env/: requirements-dev.txt  requirements.txt  set_dev_environment.sh  set_dev_environment_digitalaliance.sh  set_dev_environment_digitalaliance_gpu.sh  set_dev_environment_elm.sh  set_dev_environment_others.sh
src/: create_holdout_sample.py  create_labels.py  dev_downstreams.py  dev_feature_extraction.py  downstream.py  eval.py  extract.py  full_experiment.py  layer_stats.py  lightning_train.py  make_data.py  predict.py  scaling.py  train.py
src/data/: utils.py  (+5 more)
tools/: README.md  assemble_abide.py  assemble_ukbb.py  calculate_flops.py  calculate_flops_from_model.py  create_scaling_experiment_files.py  download_models.py  explore_hyperparameters.py  find_batch_size.py  find_experiment_status.py  number_of_workers.py
(+121 files in other folders)
