[project]
name="src"
version="0.1.0"
description="Project scripts for ukbiobank scaling."
author="htwangtw"
license="MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hydra-core==1.3.2",
    "hydra-colorlog==1.2.0",
    "hydra-submitit-launcher==1.2.0",
    "lightning",
    "comet_ml",
    "rootutils",
    "rich",
    "h5py",
    "pandas",
    "seaborn",
    "nilearn",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "pre-commit",
    "isort",
    "codespell",
    "ruff",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
target-version = ['py311']
exclude = "src/fmri-autoreg"
line_length = 79

[tool.codespell]
skip = '*.ipynb'
ignore-words = ".github/codespell_ignore_words.txt"

[tool.isort]
profile = "black"
src_paths = [
  'code/.*py',
]
line_length = 79
skip_gitignore = true
combine_as_imports = true

[tool.ruff]
exclude = [
    "code/*.ipynb",
    "**/__init__.py",
    "**/tests/*",
    "*build/",
    "code/fmri-autoreg",
    "tools/*/plot_*.py"
]

ignore = [
    "E402",
    "E501",
    "F401",
    "F403",
    "B905",
    "E731",
    "E712"
]
line-length = 79
select = [
    "B",
    "B9",
    "C",
    "E",
    "F",
    "W",
]

[tool.ruff.mccabe]
max-complexity = 18

[tool.ruff.pycodestyle]
max-doc-length = 112

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"*_test.py" = [
    "S101",  # Use of `assert` detected
]
